--- a/HPBD.html
+++ b/HPBD.html
@@ -19,7 +19,7 @@ background-image: radial-gradient(#FFC0CB, #e7bae0);
         }
         
         .container {
-            width: 1000px;
+            width: 2000px;
             height: 420px;
             padding: 10px;
             margin: auto;
@@ -381,6 +381,14 @@ background-image: radial-gradient(#FFC0CB, #e7bae0);
             font-size: 3.5em;
             font-style: italic;
         }
+        h3 {
+            position: relative;
+            top: 200px;
+            text-align: center;
+            color: rgb(0, 0, 0);
+            font-size: 3.5em;
+            font-style: italic;
+        }
     </style>
     <script>
         window.open = function() {};
@@ -413,7 +421,6 @@ background-image: radial-gradient(#FFC0CB, #e7bae0);
             </div>
         </div>
         <br><br><br><br><br>
-    <div class="container">
         <div class="balloon1">
             <div><span>B</span>
             </div>
@@ -432,9 +439,24 @@ background-image: radial-gradient(#FFC0CB, #e7bae0);
             <div><span>Y</span>
             </div>
             </div>
-        <h1>Happy birthday Lê Minh Nhúm </h1>
-        <h2>From GTM with love</h2>
-        <h2><a href="https://youtu.be/3KadWjpqDXs"><img src="https://media3.giphy.com/media/3o7bu4qyWzTS0UWTmw/giphy.gif?cid=ecf05e4773halw5qbnbws3tqirk2ojsmemxhvy6qvpvaxqw1&rid=giphy.gif&ct=g"></h2>
+        <p>
+        <h1>Happy birthday Lê Minh Nhúm <br>
+            From GTM with love </h1>
+        <h3>
+        <img src="https://scontent.fsgn1-1.fna.fbcdn.net/v/t39.30808-6/315470865_1317951582392393_9150259780170111302_n.jpg?stp=dst-jpg_p526x296&_nc_cat=105&ccb=1-7&_nc_sid=730e14&_nc_ohc=-4gOfc-1udIAX_dJWzW&_nc_ht=scontent.fsgn1-1.fna&oh=00_AfC9LcoNk-CecSYh9SNRFuAUExSSjD8UcSsSnWYtq6yr2g&oe=6376911E">
+        <img src="https://scontent.fsgn1-1.fna.fbcdn.net/v/t39.30808-6/315389911_1318274092360142_5634415031062776394_n.jpg?stp=dst-jpg_s600x600&_nc_cat=109&ccb=1-7&_nc_sid=730e14&_nc_ohc=sPCLaX37Xy4AX-GaPns&_nc_ht=scontent.fsgn1-1.fna&oh=00_AfCHxX5egJeaMhtCol6lOVpMQWd89mX62AYir4KP4nhsjA&oe=6376D28C">
+        <img src="https://scontent.fsgn1-1.fna.fbcdn.net/v/t39.30808-6/315441024_1318274195693465_8930968084284740917_n.jpg?stp=dst-jpg_s600x600&_nc_cat=109&ccb=1-7&_nc_sid=730e14&_nc_ohc=jwa-92nOdOwAX80R2aP&_nc_ht=scontent.fsgn1-1.fna&oh=00_AfDYqGDNc6Awt3MaN9xMjgnIo7BC-f3JKj8kSmdD5mALdQ&oe=63775B47">
+        <img src="https://cdn.discordapp.com/attachments/986643439137468436/1041348627790053456/FF1110D1-C732-42F4-91B5-94DAF8716D06.jpg">
+        <img src="https://cdn.discordapp.com/attachments/986643439137468436/1041348628087836744/nhum_beo.jpg">
+        <img src="https://media.discordapp.net/attachments/986643439137468436/1041348627420938340/312563472_486837780080557_8000036727040745053_n.png?width=503&height=671">
+        <img src="https://scontent.fsgn1-1.fna.fbcdn.net/v/t39.30808-6/314459931_1318274129026805_2476748506774346098_n.jpg?stp=dst-jpg_s600x600&_nc_cat=100&ccb=1-7&_nc_sid=730e14&_nc_ohc=9mX10sovrUgAX8VVlW2&tn=LOZ3YyROh7lIy7qF&_nc_ht=scontent.fsgn1-1.fna&oh=00_AfABFnruKanto2ISuwRKS_Ecm7AawjcKkphdMWRsV4IAGw&oe=6377191B">
+        <img src="https://cdn.discordapp.com/attachments/986643439137468436/1041348628318519396/Presentation1.gif">
+        </h3>
+        <h2>Click this box to continue</h2>
+        <h2>
+        <a href="https://youtu.be/3KadWjpqDXs"><img src="https://media3.giphy.com/media/3o7bu4qyWzTS0UWTmw/giphy.gif?cid=ecf05e4773halw5qbnbws3tqirk2ojsmemxhvy6qvpvaxqw1&rid=giphy.gif&ct=g">
+        </h2>
+        </p>
         </div>
     <script>
         if (document.location.search.match(/type=embed/gi)) {
