--- a/HPBD.html
+++ b/HPBD.html
@@ -372,13 +372,14 @@ background-image: radial-gradient(#FFC0CB, #e7bae0);
             text-align: center;
             color: rgb(0, 0, 0);
             font-size: 3.5em;
+            font-style: italic;
         }
         h2 {
             position: relative;
             top: 200px;
             text-align: center;
             color: rgb(0, 0, 0);
-            font-size: 3.5em;
+            font-size: 3em;
             font-style: italic;
         }
         h3 {
@@ -387,7 +388,7 @@ background-image: radial-gradient(#FFC0CB, #e7bae0);
             text-align: center;
             color: rgb(0, 0, 0);
             font-size: 3.5em;
-            font-style: italic;
+            
         }
     </style>
     <script>
@@ -454,7 +455,7 @@ background-image: radial-gradient(#FFC0CB, #e7bae0);
         </h3>
         <h2>Click this box to continue</h2>
         <h2>
-        <a href="https://youtu.be/3KadWjpqDXs"><img src="https://media3.giphy.com/media/3o7bu4qyWzTS0UWTmw/giphy.gif?cid=ecf05e4773halw5qbnbws3tqirk2ojsmemxhvy6qvpvaxqw1&rid=giphy.gif&ct=g">
+        <a href="https://www.youtube.com/watch?v=8wIGfZ-HEA4"><img src="https://media3.giphy.com/media/3o7bu4qyWzTS0UWTmw/giphy.gif?cid=ecf05e4773halw5qbnbws3tqirk2ojsmemxhvy6qvpvaxqw1&rid=giphy.gif&ct=g">
         </h2>
         </p>
         </div>
