--- a/HPBD.html
+++ b/HPBD.html
@@ -458,7 +458,7 @@ background-image: radial-gradient(#FFC0CB, #e7bae0);
             Link video(Liên hệ Trâm nghẹo )
         </h1>
         <h1>
-           <a href="https://drive.google.com/drive/folders/1B8nI7i8A9lI8LvPBJs7vxxXWMErXw9v2?usp=sharing"><img src="https://media3.giphy.com/media/3o7bu4qyWzTS0UWTmw/giphy.gif?cid=ecf05e4773halw5qbnbws3tqirk2ojsmemxhvy6qvpvaxqw1&rid=giphy.gif&ct=g">
+           <a href="https://drive.google.com/drive/folders/1B8nI7i8A9lI8LvPBJs7vxxXWMErXw9v2"><img src="https://media3.giphy.com/media/3o7bu4qyWzTS0UWTmw/giphy.gif?cid=ecf05e4773halw5qbnbws3tqirk2ojsmemxhvy6qvpvaxqw1&rid=giphy.gif&ct=g">
         </h1>
         </p>
         </div>
